# luciddreams_backend_task

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 248570171022_initial_migration.py
app/: auth.py  database.py  main.py  models.py  redis_cache.py  schemas.py  settings.py
app/routes/: auth.py  posts.py
app/services/: auth_service.py  post_service.py  user_service.py
